[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resources/Items/Switch_water_0/off.png" type="Texture" id=1]
[ext_resource path="res://Props/WaterLock.gd" type="Script" id=2]
[ext_resource path="res://Resources/VFX/Off_light.png" type="Texture" id=3]
[ext_resource path="res://Resources/VFX/Light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform sampler2D emission_teture;
uniform vec4 glow_color : hint_color = vec4(1.0);

void fragment()
{
	vec4 current_color = texture(TEXTURE,UV); // what's our current sprite pixel
	vec4 emission_color = texture(emission_teture,UV); // what's our current emission pixel
	
	if(emission_color.r > 0f) // check if we're not black in the emission color.
	{
		COLOR = (emission_color + glow_color) // add brightness corrosponding with the emission pixel
	}
	else
	{
		COLOR = current_color; // we arent over an emission pixel leave alone
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/glow_color = Color( 1, 0, 0, 1 )
shader_param/emission_teture = ExtResource( 3 )

[node name="WaterLock" type="Area2D"]
position = Vector2( 872, 168 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WaitTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Indicator" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 4, -4 )
texture = ExtResource( 3 )

[node name="Light2D" type="Light2D" parent="Indicator"]
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="." to="." method="_on_WaterLock_body_entered"]
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
